data/derived/fa15/progs/unify/prog2173.ml.out
Characters 99-101:
  in wwhile(gs, b);;
            ^^
Error: This expression has type (int -> int) -> (int -> int) * int
       but an expression was expected of type
         (int -> int) -> (int -> int) * bool
       Type int is not compatible with type bool 
